test/SemanticAnalysis/Class/OverloadedMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// Loci doesn't support method overloading,
// so the two methods clash since they share
// the same name.
class TestClass() {
	void doSomething(unused int i) { }
	
	// CHECK: .loci:11:7: error: method 'doSomething' clashes with previous method of the same name
	void doSomething(unused float f) { }
}

// CHECK: 1 error generated.
